# algoritmia-problemas-resueltos

./: CMakeLists.txt  I&O.py  Jalebi_Bai _and Decks_of_Sweets.cpp  README.md  azulejos.cpp  azulejos_pair.cpp  b.cpp  basicsum.cpp  beautiful_digit.cpp  beautiful_digit.py  chef_and_prime_factorial.c  cipher_tool.java  circuit.cpp  clases_nreinas.java  code_lock.cpp  copia_gene.py  crystal_mine.cpp  d.cpp  digital_clock.c  distribucion_binomial.cpp  dubstep.cpp  friend_or_girlfriend.cpp  general_election.cpp  geneticos_nreinas.cpp  got_recipes.cpp  hidden_number.cpp  hotel.cpp  imprimir_matriz.cpp  increasing_subsequence.cpp  inscribed_figures.cpp  insomnia_cure.cpp  is_it_rated.cpp  islotes.cpp  mini_twister.cpp  mini_twister_vector.cpp  n_reinas_On.cpp  neko_finds_grapes.cpp  number_game.cpp  pareto_optimal.cpp  pesima.py  (+17 more)
Ad_Hoc/: R2.cpp  counting_pretty_numbers.cpp  general_election.cpp  harder_ab.cpp  pintu_and_fruits.cpp  pitagoricos.cpp
Arithmetic_Algebra/: calculating_probabilities.cpp  eliminating_numbers.cpp  triangular_numbers.cpp
Brute_Force/: allinall.cpp  financial_management.cpp  suma.cpp
Combination/: geneticos_nreinas.py
Combination/n_reinas_java/: Main.java  Tablero.java
Dynamic_Programming/: extremeecrypt.cpp  sumtriangle.cpp  xtremeencrypt.py
ICPC_WrldFnl/2019/: azulejos_merge.cpp
RPC4/: C (1).cpp  C.cpp  E(1).cpp  E.cpp  d.cpp
Sorting_Searching/: thanos_sort.py  triangular.cpp  triangular2.cpp
Strings/: egyptian_binay.cpp
